# SumoHub

./: .gitignore  README.md  chart.html  install.sh  install_reqs.sh  pdb.js  pdb_observed_ranges.csv  prueba.csv  pyproject.toml  reqs.py  sumohub.py  sumohub2.py  sumohub3.py
sumohub/: 4tnd_updated.cif  run.py
sumohub/cache/: PDB->_(RES-FILTERED)_PDB.pickle  PFAM->UNIPROT.pickle  UNIPROT->FASTA_SEQUENCE.pickle  UNIPROT->PRE-FILTER->PDB.pickle  UNIPROT->PREDICTED_SUMOYLATION_SITES.pickle  UNIPROT->SEQUENCE_ACTIVE_RESIDUES.pickle  UNIPROT->UNIPROT_CANONICAL_ISOFORM.pickle
sumohub/cache/Debug/: IDs_FASTA.pickle
sumohub/models/pipelines/: __init__.py  pipeline.py
sumohub/models/sumoprotkin/: __init__.py  distances_map.py  pdb_filter.py  sink.py  source.py  sumo.py  uniprot_active_sites.py  uniprot_canonical.py  uniprot_fasta.py  uniprot_pdb.py  uniprot_pdb_fasta.py  uniprot_sumo.py
sumohub/models/sumoprotkin/predictors/: __init__.py  gpssumo.py  jassa.py  jassa_source.py  jassa_web.py  modpred.py  sumogo.py  uniprot.fasta
sumohub/web/: main.html
sumohub/web/js/: litemol.js
sumohub/web_bs/: index.html  index_main.html  index_mod.html  index_mod2.html  index_template.html
sumohub/web_bs/js/: litemol.js
tests/: test_sumohub.py
