[tool.poetry]
name = "SUMOHub"
version = "0.1.0"
description = ""
authors = ["ibn90 <israel.barnun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1"
requests = "^2.22"
requests_toolbelt = "^0.9.1"
beautifulsoup4 = "^4.8"
Flask-SQLAlchemy = "^2.4"
pandas = "^0.25.1"
pyarrow = "^0.14.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pylint = "^2.3"
rope = "^0.14.0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
