[tool.poetry]
name = "SUMOHub"
version = "0.1.0"
description = ""
authors = ["ibn90 <israel.barnun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
requests_toolbelt = "^0.9.1"
beautifulsoup4 = "^4.8"
pandas = "^0.25.1"
numpy = "^1.17"
pdbx = "^0.3.0"
pyparsing = "^2.4"
scipy = "^1.3"
uvloop = "^0.13.0"
eel = "^0.10.4"
sqlalchemy = "^1.3"
altair = "^3.2"
vega_datasets = "^0.7.0"
cefpython3 = "^66.0"
screeninfo = "^0.4.1"
pywebview = "^3.0"
vext = "^0.7.3"
"vext.gi" = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pylint = "^2.3"
rope = "^0.14.0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
